spacing issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ $font-family: 'Arvo', serif;
 
 .forced-space{
   // position: relative;
-  margin-top: 200px;
+  // margin-top: 200px;
 }
 .answer-container{
 z-index: -1;
